docs/k8s/service/commerce.yml
#file: noinspection KubernetesUnknownValues
apiVersion: apps/v1
kind: Deployment
metadata:
  name: commerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commerce
  template:
    metadata:
      labels:
        app: commerce
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: ip-10-0-0-5
      containers:
        - name: commerce
          image: minbros/commerce:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "768Mi"
              ephemeral-storage: "1.5Gi"
          ports:
            - containerPort: 8087
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: commerce-service
spec:
  selector:
    app: commerce
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
