docs/k8s/service/member.yml
#file: noinspection KubernetesUnknownValues
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels:
        app: member
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: api-server
      containers:
        - name: member
          image: minbros/member:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "768Mi"
              ephemeral-storage: "1.5Gi"
          ports:
            - containerPort: 8083
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: member-service
spec:
  selector:
    app: member
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
