docs/k8s/service/notification.yml
#file: noinspection KubernetesUnknownValues, SpellCheckingInspection
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      automountServiceAccountToken: false
      containers:
        - name: notification
          image: minbros/notification
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "192Mi"
              ephemeral-storage: "512Mi"
            limits:
              cpu: "500m"
              memory: "384Mi"
              ephemeral-storage: "1Gi"
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
    - port: 8084
      targetPort: 8084
      protocol: TCP
      name: http

# 테스트 주석
