docs/k8s/service/order.yml
#file: noinspection KubernetesUnknownValues
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      automountServiceAccountToken: false
      containers:
        - name: order
          image: minbros/order:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
              ephemeral-storage: "512Mi"
            limits:
              cpu: "500m"
              memory: "384Mi"
              ephemeral-storage: "1Gi"
          ports:
            - containerPort: 8085
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
