docs/k8s/service/point.yml
#file: noinspection KubernetesUnknownValues
apiVersion: apps/v1
kind: Deployment
metadata:
  name: point
spec:
  replicas: 1
  selector:
    matchLabels:
      app: point
  template:
    metadata:
      labels:
        app: point
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: ip-10-0-0-5
      containers:
        - name: point
          image: minbros/point:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "768Mi"
              ephemeral-storage: "1.5Gi"
          ports:
            - containerPort: 8086
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: point-service
spec:
  selector:
    app: point
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
