docs/k8s/service/product.yml
#file: noinspection KubernetesUnknownValues
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      automountServiceAccountToken: false
      containers:
        - name: product
          image: minbros/product:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
              ephemeral-storage: "512Mi"
            limits:
              cpu: "500m"
              memory: "384Mi"
              ephemeral-storage: "1Gi"
          ports:
            - containerPort: 8087
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
