docs/k8s/service/search.yml
#file: noinspection KubernetesUnknownValues, SpellCheckingInspection
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: ip-10-0-0-244
      containers:
        - name: search
          image: minbros/search:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "768Mi"
              ephemeral-storage: "1.5Gi"
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  type: ClusterIP
  selector:
    app: search
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: http
