docs/k8s/service/gateway.yml
#file: noinspection KubernetesUnknownValues, SpellCheckingInspection
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        kubernetes.io/hostname: api-server
      containers:
        - name: gateway
          image: minbros/gateway:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "500m"
              memory: "768Mi"
              ephemeral-storage: "1.5Gi"
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 15
            timeoutSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 0982-store-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: 0982.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8000
  tls:
    - hosts:
        - 0982.store
      secretName: 0982-store-tls
